tests/all/snapshots/all__ecma262__es2015_module-10.snap
---
source: tests/all/ecma262.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Expr(
                    Sequence(
                        [
                            Lit(
                                Number(
                                    "0",
                                ),
                            ),
                            Lit(
                                Number(
                                    "1",
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ),
    ),
]
