tests/all/snapshots/all__ecma262__es2015_module-8.snap
---
source: tests/all/ecma262.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Expr(
                    Assign(
                        AssignExpr {
                            operator: Equal,
                            left: Expr(
                                Ident(
                                    Ident {
                                        name: "x",
                                    },
                                ),
                            ),
                            right: Lit(
                                Number(
                                    "0",
                                ),
                            ),
                        },
                    ),
                ),
            ),
        ),
    ),
]
