tests/all/snapshots/all__ecma262__es2015_module-9.snap
---
source: tests/all/ecma262.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Expr(
                    Lit(
                        Number(
                            "0",
                        ),
                    ),
                ),
            ),
        ),
    ),
]
